--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
+html {
+  font-size: 62.5%; }
+
+body {
+  padding: 0;
+  box-sizing: border-box; }
+
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit; }
+
 h1 {
   color: red;
   text-decoration: underline; }
