--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,20 @@
+// --------------- BASE STYLES -------------
+html {
+    font-size: 62.5%;
+}
+body {
+    padding: 0;
+    box-sizing: border-box;
+}
+*,
+*::after,
+*::before {
+    padding: 0;
+    margin: 0;
+    box-sizing: inherit;
+}
+
 h1 {
-  color: red;
-  text-decoration: underline;
+    color: red;
+    text-decoration: underline;
 }
