--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,11 @@ body {
     box-sizing: inherit;
 }
 
+// --------------- TYPOGRAPHY STYLES -------------
+
+body {
+    font-family: "Josefin Sans", sans-serif;
+}
 h1 {
     color: red;
     text-decoration: underline;
