--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,8 +18,14 @@ body {
 
 body {
     font-family: "Josefin Sans", sans-serif;
+    font-size: 1.6rem;
 }
-h1 {
-    color: red;
-    text-decoration: underline;
+
+// --------------- HOME PAGE STYLES ---------------
+
+.container {
+    height: 100vh;
+    background-image: url(../img/bg-pattern-desktop.svg);
+    background-size: cover;
+    background-position: center;
 }
