--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,5 +32,9 @@ body {
         height: 100vh;
     }
     &__right-col {
+        flex-basis: 45%;
+        height: 100vh;
+        overflow: hidden;
+        background-image: url(../img/bg-pattern-desktop.svg);
     }
 }
