--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,7 +34,7 @@ body {
     &__right-col {
         flex-basis: 45%;
         height: 100vh;
-        overflow: hidden;
-        background-image: url(../img/bg-pattern-desktop.svg);
+        background-image: url(../img/hero-desktop.jpg);
+        background-size: cover;
     }
 }
