--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,5 @@ body {
     height: 100vh;
     background-image: url(../img/hero-desktop.jpg);
     background-size: cover; }
+  .home__container {
+    padding: 5rem 15rem; }
