--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,4 +37,7 @@ body {
         background-image: url(../img/hero-desktop.jpg);
         background-size: cover;
     }
+    &__container {
+        padding: 5rem 15rem;
+    }
 }
