--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,8 +17,23 @@ body {
 // --------------- TYPOGRAPHY STYLES -------------
 
 body {
-    font-family: "Josefin Sans", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 1.6rem;
+}
+.heading-primary {
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    line-height: 1.1;
+    font-size: 5rem;
+    &--pink {
+        font-weight: 300;
+        display: block;
+        color: hsl(0, 36%, 70%);
+    }
+    &--dark {
+        font-weight: 600;
+        color: hsl(0, 6%, 24%);
+    }
 }
 
 // --------------- HOME PAGE STYLES ---------------
