--- a/css/main.css
+++ b/css/main.css
@@ -18,12 +18,11 @@ body {
 
 .heading-primary {
   text-transform: uppercase;
-  letter-spacing: 10px;
+  letter-spacing: 1.5rem;
   line-height: 1.1;
-  font-size: 5rem; }
+  font-size: 7rem; }
   .heading-primary--pink {
     font-weight: 300;
-    display: block;
     color: #ce9797; }
   .heading-primary--dark {
     font-weight: 600;
@@ -47,4 +46,5 @@ body {
   .home__paragraph {
     color: #ce9797;
     font-size: 1.6rem;
-    line-height: 1.5; }
+    line-height: 1.5;
+    padding: 0 2rem 0 0; }
