--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,6 +54,8 @@ body {
     &__container {
         padding: 5rem 15rem;
     }
+    &__section {
+    }
     &__body {
     }
     &__logo-div {
@@ -62,6 +64,6 @@ body {
         color: hsl(0, 36%, 70%);
         font-size: 1.6rem;
         line-height: 1.5;
-        padding: 0 2rem 0 0;
+        padding: 0 5rem 0 0;
     }
 }
