--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,5 +80,15 @@ body {
             color: hsl(0, 36%, 70%);
             opacity: 0.6;
         }
+        &::-ms-input-placeholder {
+            color: hsl(0, 36%, 70%);
+            opacity: 0.6;
+        }
+        &:-ms-input-placeholder {
+            color: hsl(0, 36%, 70%);
+            opacity: 0.6;
+        }
+    }
+    &__btn {
     }
 }
