--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ body {
     font-size: 1.6rem;
     line-height: 1.5; }
   .home__input {
-    width: 75%;
+    width: 95%;
     border-radius: 5rem;
     padding: 1rem 2rem;
     border: 1px solid #ce9797;
@@ -65,3 +65,14 @@ body {
     .home__input:-ms-input-placeholder {
       color: #ce9797;
       opacity: 0.6; }
+  .home__form {
+    position: relative; }
+  .home__btn {
+    border: none;
+    padding: 1rem 2rem;
+    font-family: 'Josefin Sans', sans-serif;
+    border-radius: 5rem;
+    font-size: 1.6rem;
+    position: absolute;
+    right: 1rem;
+    bottom: 1px; }
