--- a/css/main.css
+++ b/css/main.css
@@ -75,4 +75,6 @@ body {
     font-size: 1.6rem;
     position: absolute;
     right: 1rem;
-    bottom: 1px; }
+    bottom: 0.1rem;
+    background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
+    box-shadow: 0 1.5rem 2rem rgba(206, 150, 150, 0.5); }
