--- a/scss/main.scss
+++ b/scss/main.scss
@@ -100,6 +100,9 @@ body {
         font-size: 1.6rem;
         position: absolute;
         right: 1rem;
-        bottom: 1px;
+        bottom: 0.1rem;
+        // background-image: linear-gradient(135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%));
+        background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
+        box-shadow: 0 1.5rem 2rem rgba(206, 150, 150, 0.5);
     }
 }
