--- a/scss/main.scss
+++ b/scss/main.scss
@@ -72,7 +72,7 @@ body {
     &__input {
         width: 95%;
         border-radius: 5rem;
-        padding: 1rem 2rem;
+        padding: 1.5rem 2rem;
         border: 1px solid hsl(0, 36%, 70%);
         font-family: 'Josefin Sans', sans-serif;
         font-size: 1.6rem;
@@ -94,13 +94,13 @@ body {
     }
     &__btn {
         border: none;
-        padding: 1rem 2rem;
+        padding: 1.6rem 2rem;
         font-family: 'Josefin Sans', sans-serif;
         border-radius: 5rem;
         font-size: 1.6rem;
         position: absolute;
         right: 1rem;
-        bottom: 0.1rem;
+        // top: 0.1rem;
         // background-image: linear-gradient(135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%));
         background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
         box-shadow: 0 1.5rem 2rem rgba(206, 150, 150, 0.5);
