--- a/css/main.css
+++ b/css/main.css
@@ -69,11 +69,12 @@ body {
     position: relative; }
   .home__btn {
     border: none;
+    color: white;
     padding: 1.6rem 2rem;
     font-family: 'Josefin Sans', sans-serif;
     border-radius: 5rem;
     font-size: 1.6rem;
     position: absolute;
     right: 1rem;
-    background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
+    background-image: linear-gradient(135deg, #f8bfbf, #ee8c8c);
     box-shadow: 0 1.5rem 2rem rgba(206, 150, 150, 0.5); }
