--- a/scss/main.scss
+++ b/scss/main.scss
@@ -88,6 +88,9 @@ body {
             color: hsl(0, 36%, 70%);
             opacity: 0.6;
         }
+        &:focus {
+            outline: none;
+        }
     }
     &__form {
         position: relative;
