--- a/css/main.css
+++ b/css/main.css
@@ -83,3 +83,5 @@ body {
     right: 1rem;
     background-image: linear-gradient(135deg, #f8bfbf, #ee8c8c);
     box-shadow: 0 1.5rem 2rem rgba(206, 150, 150, 0.5); }
+    .home__btn:hover {
+      box-shadow: 0 1.5rem 1rem rgba(206, 150, 150, 0.5); }
