--- a/scss/main.scss
+++ b/scss/main.scss
@@ -108,6 +108,7 @@ body {
         box-shadow: 0 1.5rem 2rem rgba(206, 150, 150, 0.5);
         &:hover {
             box-shadow: 0 1.5rem 2rem rgba(206, 150, 150, 0.8);
+            background-image: linear-gradient(135deg, hsl(0, 100%, 98%), hsl(0, 80%, 86%));
         }
     }
 }
