--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,10 @@ body {
   .home__form {
     position: relative;
     padding-top: 2rem; }
+  .home__icon {
+    position: absolute;
+    right: 10rem;
+    top: 3rem; }
   .home__btn {
     border: none;
     padding: 1.2rem 3rem;
