--- a/css/main.css
+++ b/css/main.css
@@ -93,3 +93,8 @@ body {
     .home__btn:hover {
       box-shadow: 0 1.5rem 1.5rem rgba(206, 150, 150, 0.8);
       background-image: linear-gradient(135deg, #fff5f5, #f8bfbf); }
+  .home__error-msg {
+    color: #f96262;
+    font-size: 1.4rem;
+    padding-left: 2rem;
+    margin-top: 1rem; }
