--- a/scss/main.scss
+++ b/scss/main.scss
@@ -120,4 +120,10 @@ body {
             background-image: linear-gradient(135deg, hsl(0, 100%, 98%), hsl(0, 80%, 86%));
         }
     }
+    &__error-msg {
+        color: hsl(0, 93%, 68%);
+        font-size: 1.4rem;
+        padding-left: 2rem;
+        margin-top: 1rem;
+    }
 }
