--- a/scss/main.scss
+++ b/scss/main.scss
@@ -127,3 +127,8 @@ body {
         margin-top: 1rem;
     }
 }
+
+// --------------- HELPERS ---------------
+.toggle-visibility {
+    visibility: hidden;
+}
