--- a/scss/main.scss
+++ b/scss/main.scss
@@ -112,7 +112,8 @@ body {
         right: 1rem;
         background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
         box-shadow: 0 1.5rem 2rem rgba(206, 150, 150, 0.5);
-        &:active {
+        &:active,
+        &:focus {
             outline: none;
         }
         &:hover {
